# SampleTrainer

./: .gitignore  CMakeLists.txt  Main.cpp  MainComponent.h  QuizzComponent.h  README.md  SampleBufferCache.cpp  SampleRepository.h  SampleSelectorAudio.h  SampleSelectorComponent.h  Sampler.h  clang-format
.github/workflows/: cmake.yml
Google-Tests/: CMakeLists.txt  quizz_component_test.cpp  quizz_test.cpp
Quizz/: Game.cpp  Game.h  QuizzComponent.cpp  QuizzComponent.h  QuizzSampleListComponent.h  QuizzSource.h  SampleVoice.h  Sampler.cpp  SamplerSource.h  Sequencer.h
Quizz/Views/: Panels.h  QuizzComponent.cpp  QuizzComponent.h  QuizzSampleListComponent.h
SampleSelector/: SampleSelectorAudio.h  SampleSelectorComponent.cpp  SampleSelectorComponent.h  SampleSelectorPanel.cpp  SampleSelectorPanel.h
Samples/: SampleBufferCache.cpp  SampleBufferCache.h  SampleInfos.h  SamplePlayer.h  SampleRepository.cpp  SampleRepository.h  SampleVoice.h  Sampler.cpp  Sampler.h
modules/juce_audio_basics/sources/: juce_MemoryAudioSource.cpp
